--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-ts-app",
   "version": "0.1.0",
   "private": true,
-  "homePage": "https://korol-wokolada.github.io/my-ts-app/",
+  "homePage": "https://korol-wokolada.github.io/my-ts-app",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
@@ -39,8 +39,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
