--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-ts-app",
   "version": "0.1.0",
   "private": true,
-  "homePage": "https://korol-wokolada.github.io/my-ts-app",
+  "homePage": "https://korol-wokolada.github.io/my-ts-app/projectPage",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
@@ -25,6 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-helmet": "^6.1.7"
   }
 }
