--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/react-helmet": "^6.1.7"
+    "@types/react-helmet": "^6.1.7",
+    "gh-pages": "^6.0.0"
   }
 }
