--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-ts-app",
   "version": "0.1.0",
   "private": true,
-  "homePage": "https://korol-wokolada.github.io/my-ts-app/",
+  "homePage": "https://korol-wokolada.github.io/my-ts-app",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
